com.cts.sample.rest.products.application/target/classes/META-INF/fabric8/openshift/bwce-sample-service-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    container: bwce-sample
    provider: fabric8
    project: bwce-sample
    group: com.tibco.bw
    expose: "true"
    app: com.cts.sample.rest.products.application
    version: 1.0.0-SNAPSHOT
  name: bwce-sample-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8087
  selector:
    container: bwce-sample
    provider: fabric8
    project: bwce-sample
    group: com.tibco.bw
    app: com.cts.sample.rest.products.application
  type: LoadBalancer
